# wordcount

./: Cargo.toml  README.md  text.txt
src/: lib.rs
tests/: char.rs  line.rs
tests/utils/: mod.rs
